# NJUPT2023Apollo2D

./: .gitmodules  CMakeLists.txt  README.md  build.sh  init.sh
apollo-trainer/: hfo_param.cpp  hfo_param.h  hfo_random.h  hfo_trainer.cpp  hfo_trainer.h  main_trainer.cpp
penalty-trainer/: CMakeLists.txt  main_trainer.cpp  object.h  penalty_trainer.cpp  penalty_trainer.h  sample_trainer.cpp  sample_trainer.h
script/: keeper.sh  sample_player.cpp  taker.sh  train.sh
